2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* man/amtoc.8.in: Document -w.

2000-01-21  David Wolfskill  <dhw@whistle.com>

	* server-src/amtoc.pl.in: Add `-w' to add new lines and form feeds.

2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* man/amlabel.8.in: Tapes are no longer requested in reverse order
	of amlabeling.
	Reported by Brad Guillory <round@baileylink.net>

	* server-src/amstatus.pl.in: New option --stats, to display
	statistics about dumpers and taper.
	* man/amstatus.8.in: Document it.

2000-01-21  David Wolfskill  <dhw@whistle.com>

	* server-src/amstatus.pl.in: Sort dumpers by number.

2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* server-src/amstatus.pl.in: Remove bogus (?) line `$$host=1'.

	* configure.in (MAILER): Warn or print an error if not found,
	depending on whether server code is disabled or not.

	* server-src/reporter.c (output_tapeinfo): Report used tapes
	regardless of tape errors.

	* config/acinclude.m4i (CF_WAIT): Simplify the test.  Declare wait()
	in the global scope.

2000-01-21  Garrett Wollman  <wollman@khavrinen.lcs.mit.edu>

	* config/acinclude.m4i (CF_WAIT): Avoid warnings on systems
	where `union wait' works but is deprecated.

2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* recover-src/uscan.l (settape): Recognize it.
	* recover-src/uparse.y: Parse it.
	* recover-src/amrecover.h (set_tape): Declare it.
	* recover-src/set_commands.c (set_tape): Implement it.
	* recover-src/help.c (help_list): Document it.
	* man/amrecover.8.in: Likewise.
	* recover-src/extract_list.c (extract_files): Warn if tape device is
	/dev/null.
	* recover-src/amrecover.c (tape_device_name): Default to
	server-determined default.

2000-01-17  Thomas Hepper <th@ant.han.de>
	* changer-src/scsi-changer-driver.c : Typo in CheckMove fixed .

2000-01-17  Thomas Hepper <th@ant.han.de>

	* configure.in: check for scsi/sg.h on linux, and if true
	enable sg support
